# ncio

./: .gitignore  meson_options.txt
bindings/: meson.build
bindings/Python/: meson.build  py11ncio.cpp
bindings/Python/ncio/py11/: py11DataDescriptor.cpp  py11DataDescriptor.h  py11NCIO.cpp  py11NCIO.h
bindings/Python/ncio/py11/schema/nexus/: py11DataDescriptorNexus.h
subprojects/: pybind11.wrap
testing/ci/functional/bindings/: meson.build
testing/ci/functional/bindings/Python/: functionalTest_py11NCIO.py  meson.build
